correccion de forms

--- a/ddd/management/templates/templates/web_edit_save_register.html
+++ b/ddd/management/templates/templates/web_edit_save_register.html
@@ -8,9 +8,14 @@ Django form
     <h1 class="title">Edit/Save Form in Django</h1>
 
     {% if form.errors %}
-        <div class="alert alert-danger">
-            <strong class="red">Error!</strong> There are errors in the form:
-        </div>
+    <div class="alert alert-danger">
+        <strong class="red">Error!</strong> There are errors in the form item:
+        <ul>
+            {% for error in form.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
     {% endif %}
 
     <form action="" method="POST">
