cambios en validaciones y campos del formulario

--- a/ddd/management/templates/templates/web_detail_register.html
+++ b/ddd/management/templates/templates/web_detail_register.html
@@ -8,12 +8,26 @@ Django form based
     <h1 class="title">View Form in Django</h1>
 
     <form action="{% url '[[ entity_name.lower() ]]_list' %}" method="GET">
-
         {% csrf_token %}
 
         {{ form.as_p }}
 
         <a href="{% url '[[ entity_name.lower() ]]_list' %}" class="btn btn-primary btn-link">Go List</a>
-
     </form>
+
+    {% comment %}  
+    <form action="{% url '[[ entity_name.lower() ]]_list' %}" method="GET">
+        {% csrf_token %}
+        
+        {% for field in form %}
+            <div class="form-group">
+                {{ field.label_tag }}
+                {{ field }}
+            </div>
+        {% endfor %}
+
+        <a href="{% url '[[ entity_name.lower() ]]_list' %}" class="btn btn-primary btn-link">Go List</a>
+    </form>         
+    {% endcomment %}
+
 {% endblock %} 
