--- a/ddd/management/templates/templates/web_edit_register.html
+++ b/ddd/management/templates/templates/web_edit_register.html
@@ -7,23 +7,64 @@ Django form
 {% block content %}
     <h1 class="title">Edit Form in Django</h1>
 
-    {% if form.errors %}
-    <div class="alert alert-danger">
-        <strong class="red">Error!</strong> There are errors in the form item:
-        <ul>
-            {% for error in form.errors %}
-                <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-    </div>
+    <!--Codigo de Mensajes de error-->
+    {% if messages %}
+        <!-- Mostrar mensajes globales del framework de mensajes -->
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                <strong>{{ message.tags|capfirst }}:</strong> {{ message }}
+            </div>
+        {% endfor %}
     {% endif %}
-        
-    <form action="{% url '[[ entity_name.lower() ]]_save'  id=form.id.value  %}" method="POST">
 
+    {% if form.errors %}
+        <div class="alert alert-danger">
+            <ul>
+                <!-- Mostrar errores globales del formulario -->
+                {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+
+                <!-- Mostrar errores específicos de los campos -->
+                {% for field, errors in form.errors.items %}
+                    {% if field != '__all__' %}
+                        {% for error in errors %}
+                            <li>{{ field|capfirst }}: {{ error }}</li>
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+
+    <!--Codigo de Formulario-->
+    <form action="{% url '[[ entity_name.lower() ]]_save'  id=form.id.value  %}" method="POST">
         {% csrf_token %}
 
         {{ form.as_p }}
 
         <input type="submit" value="Save" />
     </form>
+
+    {% comment %}  
+    <form action="{% url '[[ entity_name.lower() ]]_save'  id=form.id.value  %}" method="POST">
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+        
+        {% for field in form %}
+            <div class="form-group">
+                {{ field.label_tag }}
+                {{ field }}
+                {% if field.errors %}
+                    <div class="text-danger">
+                        {{ field.errors|join:", " }}
+                    </div>
+                {% endif %}
+            </div>
+        {% endfor %}
+
+        <input type="submit" value="Save" />
+    </form>         
+    {% endcomment %}
+
 {% endblock %} 
