añadiendo informacion sobre validaciones y validadores del formulario de django

--- a/ddd/management/templates/templates/web_create_register.html
+++ b/ddd/management/templates/templates/web_create_register.html
@@ -48,10 +48,12 @@ Django form create
     </form>
 
     {% comment %}  
+    <!-- ejemplo de como personalizar el formulario -->
+
     <form method="post">
         {% csrf_token %}
-        {{ form.non_field_errors }}
         
+        <!-- ejemplo de como generar todos los campos -->
         {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
@@ -63,6 +65,21 @@ Django form create
                 {% endif %}
             </div>
         {% endfor %}
+
+        <!-- ejemplo de como generar un campo especifico -->
+        <div id="div_{{ form.email.id_for_label }}" class="mb-3">
+            <label for="{{ form.email.id_for_label }}" class="form-label">
+                {{ form.email.label }}
+            </label>
+            {{ form.email }}
+            {% if form.email.errors %}
+                <div class="text-danger">
+                    {% for error in form.email.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}            
+        </div>             
 
         <input type="submit" value="Save" />
     </form>         
