--- a/ddd/management/templates/templates/web_detail_register.html
+++ b/ddd/management/templates/templates/web_detail_register.html
@@ -16,15 +16,33 @@ Django form detail
     </form>
 
     {% comment %}  
+    <!-- ejemplo de como personalizar el formulario -->
+
     <form action="{% url '[[ entity_name.lower() ]]_list' %}" method="GET">
         {% csrf_token %}
         
+        <!-- ejemplo de como generar todos los campos -->
         {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
                 {{ field }}
             </div>
         {% endfor %}
+
+        <!-- ejemplo de como generar un campo especifico -->
+        <div id="div_{{ form.email.id_for_label }}" class="mb-3">
+            <label for="{{ form.email.id_for_label }}" class="form-label">
+                {{ form.email.label }}
+            </label>
+            {{ form.email }}
+            {% if form.email.errors %}
+                <div class="text-danger">
+                    {% for error in form.email.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}            
+        </div>          
 
         <a href="{% url '[[ entity_name.lower() ]]_list' %}" class="btn btn-primary btn-link">Go List</a>
     </form>         
