--- a/ddd/management/templates/templates/web_create_register.html
+++ b/ddd/management/templates/templates/web_create_register.html
@@ -39,7 +39,7 @@ Django form create
     {% endif %}
 
     <!--Codigo de Formulario-->
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         {{ form.as_p }}
@@ -50,7 +50,7 @@ Django form create
     {% comment %}  
     <!-- ejemplo de como personalizar el formulario -->
 
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         
         <!-- ejemplo de como generar todos los campos -->
