--- a/ddd/management/templates/templates/web_edit_register.html
+++ b/ddd/management/templates/templates/web_edit_register.html
@@ -39,7 +39,7 @@ Django form edit
     {% endif %}
 
     <!--Codigo de Formulario-->
-    <form action="" method="POST">
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         {{ form.as_p }}
