--- a/ddd/management/templates/templates/web_edit_register.html
+++ b/ddd/management/templates/templates/web_edit_register.html
@@ -19,7 +19,7 @@ Django form edit
 
     {% if form.errors %}
         <div class="alert alert-danger">
-            <strong class="red">Error!</strong> <spam data-coreui-i18n="There_are_errors_in_the_form">There are errors in the form</spam>:
+            <strong class="red">Error!</strong> <spam>There are errors in the form</spam>:
             <ul>
                 <!-- Mostrar errores globales del formulario -->
                 {% for error in form.non_field_errors %}
