añadiendo comentarios al archivo web_edit_register.html

--- a/ddd/management/templates/templates/web_edit_register.html
+++ b/ddd/management/templates/templates/web_edit_register.html
@@ -7,7 +7,7 @@ Django form edit
 {% block content %}
     <h1 class="title">Edit/Save Form in Django</h1>
 
-    <!--Codigo de Mensajes de error-->
+    <!--Codigo de Mensajes de alerta-->
     {% if messages %}
         <!-- Mostrar mensajes globales del framework de mensajes -->
         {% for message in messages %}
