correccion de los alerts en  los templates de registro

--- a/ddd/management/templates/templates/web_list_register.html
+++ b/ddd/management/templates/templates/web_list_register.html
@@ -11,7 +11,7 @@ Django form list
     {% if messages %}
         <!-- Mostrar mensajes globales del framework de mensajes -->
         {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}">
+            <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}info{% endif %}">
                 <strong>{{ message.tags|capfirst }}:</strong> {{ message }}
             </div>
         {% endfor %}
