correccion: nombre genericos de campos ejemplo

--- a/ddd/management/templates/templates/web_list_register.html
+++ b/ddd/management/templates/templates/web_list_register.html
@@ -21,10 +21,10 @@ Django form list
     <table class="table table-striped border datatable">
         <thead>
           <tr>       
-            <th>Name</th>
-            <th>Email</th>            
-            <th>Role</th>                       
-            <th>Status</th>
+            <th>AttributeName</th>
+            <th>AttributeEmail</th>            
+            <th>AttributeRole</th>                       
+            <th>AttributeStatus</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -32,12 +32,12 @@ Django form list
 
             {% for [[ entity_name.lower() ]] in [[ entity_name.lower() ]]_list %}
             <tr class="align-middle">              
-                <td>{{[[ entity_name.lower() ]].name}}</td>                
-                <td>{{[[ entity_name.lower() ]].email}}</td>
+                <td>{{[[ entity_name.lower() ]].attributeName}}</td>                
+                <td>{{[[ entity_name.lower() ]].attributeEmail}}</td>
                 <td>
-                    {% if [[ entity_name.lower() ]].role == 'adm' %} Administrator {% elif [[ entity_name.lower() ]].role == 'man' %} Manager {% elif [[ entity_name.lower() ]].role == 'emp' %} Employee {% endif %}
+                    {% if [[ entity_name.lower() ]].attributeRole == 'adm' %} Administrator {% elif [[ entity_name.lower() ]].attributeRole == 'man' %} Manager {% elif [[ entity_name.lower() ]].attributeRole == 'emp' %} Employee {% endif %}
                 </td>
-                <td>{{[[ entity_name.lower() ]].status}}</td>
+                <td>{{[[ entity_name.lower() ]].attributeStatus}}</td>
                 <td>
                     <a class="btn btn-success" href="">Edit</a>
                     <a class="btn btn-success" href="">View</a>
