--- a/ddd/management/templates/templates/web_create_register.html
+++ b/ddd/management/templates/templates/web_create_register.html
@@ -67,14 +67,14 @@ Django form create
         {% endfor %}
 
         <!-- ejemplo de como generar un campo especifico -->
-        <div id="div_{{ form.email.id_for_label }}" class="mb-3">
-            <label for="{{ form.email.id_for_label }}" class="form-label">
-                {{ form.email.label }}
+        <div id="div_{{ form.attributeName.id_for_label }}" class="mb-3">
+            <label for="{{ form.attributeName.id_for_label }}" class="form-label">
+                {{ form.attributeName.label }}
             </label>
-            {{ form.email }}
-            {% if form.email.errors %}
+            {{ form.attributeName }}
+            {% if form.attributeName.errors %}
                 <div class="text-danger">
-                    {% for error in form.email.errors %}
+                    {% for error in form.attributeName.errors %}
                         <p>{{ error }}</p>
                     {% endfor %}
                 </div>
