--- a/ddd/management/templates/templates/web_detail_register.html
+++ b/ddd/management/templates/templates/web_detail_register.html
@@ -7,7 +7,7 @@ Django form detail
 {% block content %}
     <h1 class="title">View Form in Django</h1>
 
-    <!--Codigo de Mensajes de error-->
+    <!-- Mensajes globales -->
     {% if messages and not form.errors %}
         <!-- Mostrar mensajes globales del framework de mensajes -->
         {% for message in messages %}
