correccion de errores en los templates de Django

--- a/ddd/management/templates/templates/web_detail_register.html
+++ b/ddd/management/templates/templates/web_detail_register.html
@@ -17,6 +17,7 @@ Django form detail
         {% endfor %}
     {% endif %}    
 
+    <!--Codigo de Formulario-->
     <form action="{% url '[[ app_route.lower() ]]:[[ entity_name.lower() ]]_list' %}" method="GET">
         {% csrf_token %}
 
