--- a/ddd/management/templates/templates/web_detail_register.html
+++ b/ddd/management/templates/templates/web_detail_register.html
@@ -7,15 +7,7 @@ Django form detail
 {% block content %}
     <h1 class="title">View Form in Django</h1>
 
-    <!-- Mensajes globales -->
-    {% if messages %}
-        <!-- Mostrar mensajes globales del framework de mensajes -->
-        {% for message in messages %}
-            <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{message.tags}}{% endif %}">
-                <strong>{{ message.tags|capfirst }}:</strong> {{ message }}
-            </div>
-        {% endfor %}
-    {% endif %}    
+    {% include '[[ relative_app_path ]]/_web_global_errors.html' %}  
 
     <!--Codigo de Formulario-->
     <form action="{% url '[[ app_route.lower() ]]:[[ entity_name.lower() ]]_list' %}" method="GET">
