--- a/app1/templates/app1/company_web_detail.html
+++ b/app1/templates/app1/company_web_detail.html
@@ -11,18 +11,18 @@ Django form detail
     {% include 'app1/_web_global_errors.html' %}  
 
     <!--Codigo de Formulario-->
-    <form action="{% url 'app1:promotion_list' %}" method="GET">
+    <form action="{% url 'app1:company_list' %}" method="GET">
         {% csrf_token %}
 
         {{ form.as_p }}
 
-        <a href="{% url 'app1:promotion_list' %}" class="btn btn-primary btn-link">Go List</a>
+        <a href="{% url 'app1:company_list' %}" class="btn btn-primary btn-link">Go List</a>
     </form>
 
     {% comment %}  
     <!-- ejemplo de como personalizar el formulario -->
 
-    <form action="{% url 'app1:promotion_list' %}" method="GET">
+    <form action="{% url 'app1:company_list' %}" method="GET">
         {% csrf_token %}
         
         <!-- ejemplo de como generar todos los campos -->
@@ -48,7 +48,7 @@ Django form detail
             {% endif %}            
         </div>          
 
-        <a href="{% url 'app1:promotion_list' %}" class="btn btn-primary btn-link">Go List</a>
+        <a href="{% url 'app1:company_list' %}" class="btn btn-primary btn-link">Go List</a>
     </form>         
     {% endcomment %}
 
