Nueva version 2.0.0 - Se han realizado cambios significativos en la estructura y funcionalidad del código para mejorar la mantenibilidad y escalabilidad del proyecto. Estos cambios incluyen: - Refactorización de las clases de entidad para utilizar dataclasses y Pydantic, mejorando la validación y manipulación de datos. - Actualización de los servicios para eliminar validaciones redundantes, confiando en las capacidades de las nuevas clases de entidad. - Modificación de los repositorios para manejar correctamente los campos de entidad no persistibles, asegurando una gestión adecuada de los datos. - Implementación de nuevas convenciones para la gestión de campos requeridos, de solo lectura y protegidos en las entidades. - Mejora en la documentación y comentarios del código para reflejar los cambios realizados y facilitar la comprensión del mismo

--- a/ddd/management/templates/templates/web_edit_register.html
+++ b/ddd/management/templates/templates/web_edit_register.html
@@ -39,14 +39,14 @@ Django form edit
         {% endfor %}
 
         <!-- ejemplo de como generar un campo especifico -->
-        <div id="div_{{ form.attributeName.id_for_label }}" class="mb-3">
-            <label for="{{ form.attributeName.id_for_label }}" class="form-label">
-                {{ form.attributeName.label }}
+        <div id="div_{{ form.name.id_for_label }}" class="mb-3">
+            <label for="{{ form.name.id_for_label }}" class="form-label">
+                {{ form.name.label }}
             </label>
-            {{ form.attributeName }}
-            {% if form.attributeName.errors %}
+            {{ form.name }}
+            {% if form.name.errors %}
                 <div class="text-danger">
-                    {% for error in form.attributeName.errors %}
+                    {% for error in form.name.errors %}
                         <p>{{ error }}</p>
                     {% endfor %}
                 </div>
